@@ -1,8 +1,10 @@
-CHANGES.txt - 02/18/2005
+CHANGES.txt - 04/18/2005
 ------------------------
 
 CHANGES IN CUPS V1.2.0b1
 
+	- The scheduler could crash when deleting a class due to
+	  infinite recursion.
 	- Updated the Zebra ZPL label printer driver to use the
 	  run-length encoding and support more options.
 	- Updated serial backend to scan for /dev/ttyC* as well
